# assembly-compiler-education

./: .gitignore  CMakeLists.txt  README.md  example.asm  run.sh
docs/: CMakeLists.txt  Doxyfile.dev  Doxyfile.public  index.dox
include/: Compiler.h  Lexer.h
include/ast/: Directive.h  Instruction.h  Statement.h
include/common/: CompilerError.h  Helper.h  OperandTypes.h  Registers.h  Token.h
include/encoder/: ElfWriter.h  InstructionEncoder.h  Layout.h  SizeResolver.h
include/grouper/: Grouper.h
include/ir/: Program.h
include/lexer/: Lexer.h
include/opcodes/: Opcode.h  OpcodeFactories.h  OpcodePattern.h  OpcodeTable.h
include/parser/: MemoryExpression.h  Parser.h
src/: CMakeLists.txt  Compiler.cpp  Lexer.cpp  main.cpp
src/encoder/: CMakeLists.txt  ElfWriter.cpp  InstructionEncoder.cpp  Layout.cpp  SizeResolver.cpp
src/grouper/: CMakeLists.txt  Grouper.cpp
src/lexer/: CMakeLists.txt  Lexer.cpp
src/opcodes/: CMakeLists.txt  OpcodeFactories.cpp
src/parser/: CMakeLists.txt  Parser.cpp
tests/: CMakeLists.txt
tests/unit/: LexerUnitTests.cpp  ParserUnitTests.cpp
